[package]
name = "pca_tree"
version = "0.1.0"
edition = "2024"

[features]
default = []
plot = ["plotters"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
plotters = { version = "0.3", features = ["bitmap_backend"], optional = true }
